Review comments: Comparator, toList, code to be moved into catch
Signed-off-by: Laurent Garnier <lg.hc@free.fr>